--- a/Smooth Numbers/Smooth Numbers.vcxproj
+++ b/Smooth Numbers/Smooth Numbers.vcxproj
@@ -81,6 +81,10 @@
     <CodeAnalysisRuleSet Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">smooth</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">smooth</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">smooth</TargetName>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">smooth</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -95,6 +99,11 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PostBuildEvent>
+      <Command>cd "$(TargetDir)"
+start "smooth.bat" "$(ProjectDir)smooth.bat"</Command>
+      <Message>Calls a batch file invoking the program with numerous test inputs.</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Midl>
@@ -114,9 +123,9 @@
       <TargetMachine>MachineX64</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>cd "$(SolutionDir)$(Platform)\$(Configuration)"
-"$(SolutionDir)$(ProjectName)\smooth.bat"
-</Command>
+      <Command>cd "$(TargetDir)"
+start "smooth.bat" "$(ProjectDir)smooth.bat"</Command>
+      <Message>Calls a batch file invoking the program with numerous test inputs.</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -134,6 +143,11 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PostBuildEvent>
+      <Command>cd "$(TargetDir)"
+start "smooth.bat" "$(ProjectDir)smooth.bat"</Command>
+      <Message>Calls a batch file invoking the program with numerous test inputs.</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Midl>
@@ -162,13 +176,16 @@
       <TargetMachine>MachineX64</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>cd "$(SolutionDir)$(Platform)\$(Configuration)"
-start "HI" "$(SolutionDir)$(ProjectName)\smooth.bat"
-</Command>
+      <Command>cd "$(TargetDir)"
+start "smooth.bat" "$(ProjectDir)smooth.bat"</Command>
+      <Message>Calls a batch file invoking the program with numerous test inputs.</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="smooth.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="εκφώνηση.pdf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
