--- a/Smooth Numbers/Smooth Numbers.vcxproj.filters
+++ b/Smooth Numbers/Smooth Numbers.vcxproj.filters
@@ -13,10 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Documentation">
+      <UniqueIdentifier>{3a6d9378-415c-4226-94dd-770be0a957e7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="smooth.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="εκφώνηση.pdf">
+      <Filter>Documentation</Filter>
+    </None>
   </ItemGroup>
 </Project>
